TestArchive/large_test/cycle_0021/build.err
perl: warning: Setting locale failed.
perl: warning: Please check that your locale settings:
	LANGUAGE = (unset),
	LC_ALL = (unset),
	LC_CTYPE = "C.UTF-8",
	LANG = "en_US.UTF-8"
    are supported and installed on your system.
perl: warning: Falling back to the standard locale ("C").
%Warning-UNOPTFLAT: /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:36:12: Signal unoptimizable: Circular combinational logic: 'tb_top.dut.const_partselect_wrapper_out_flat'
   36 | wire [7:0] const_partselect_wrapper_out_flat;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    ... For warning description see https://verilator.org/warn/UNOPTFLAT?v=5.033
                    ... Use "/* verilator lint_off UNOPTFLAT */" and lint_on around source to disable this message.
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:36:12:      Example path: tb_top.dut.const_partselect_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:168:47:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:29:13:      Example path: tb_top.dut.const_conditional_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/const_conditional_wrapper.sv:22:14:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:30:13:      Example path: tb_top.dut.const_conditional_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:150:44:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:25:13:      Example path: tb_top.dut.const_compare_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/const_compare_wrapper.sv:25:8:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:26:12:      Example path: tb_top.dut.const_compare_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:230:46:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:35:13:      Example path: tb_top.dut.const_partselect_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/const_partselect_wrapper.sv:19:8:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:36:12:      Example path: tb_top.dut.const_partselect_wrapper_out_flat
%Warning-UNOPTFLAT: /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:56:12: Signal unoptimizable: Circular combinational logic: 'tb_top.dut.width_logic_wrapper_out_flat'
   56 | wire [5:0] width_logic_wrapper_out_flat;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:56:12:      Example path: tb_top.dut.width_logic_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:168:47:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:29:13:      Example path: tb_top.dut.const_conditional_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/const_conditional_wrapper.sv:22:14:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:30:13:      Example path: tb_top.dut.const_conditional_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:150:44:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:25:13:      Example path: tb_top.dut.const_compare_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/const_compare_wrapper.sv:25:8:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:26:12:      Example path: tb_top.dut.const_compare_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:230:46:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:35:13:      Example path: tb_top.dut.const_partselect_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/const_partselect_wrapper.sv:19:8:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:36:12:      Example path: tb_top.dut.const_partselect_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0021/top.sv:168:47:      Example path: ASSIGNW
%Error: Exiting due to 2 warning(s)
